Fixed overflow of GUI content. Advanced logging for configuration backend.

--- a/App/src/client/dialog/dialog.scss
+++ b/App/src/client/dialog/dialog.scss
@@ -70,6 +70,8 @@
     margin-bottom: 5px;
 
     padding: 10px;
+
+    overflow-y: auto;
 }
 
 .#{$dialog_buttonDiv} {
