--- a/App/src/client/view/configuration/configuration.scss
+++ b/App/src/client/view/configuration/configuration.scss
@@ -143,4 +143,7 @@
     margin: 5px;
     
     padding: 5px;
+
+    overflow-x: auto;
+    white-space: pre-wrap;
 }
